#474 Fix z-index so that navbar menus show.

--- a/assets/css/sass/_slideout.sass
+++ b/assets/css/sass/_slideout.sass
@@ -216,7 +216,6 @@
   margin-left: 0px
   position: relative !important
   top: 58px !important 
-  z-index: 1031
 
 .slide-left
   transform: translate(356px, 0)
