--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1625,8 +1625,7 @@ header {
 #container {
   margin-left: 0px;
   position: relative !important;
-  top: 58px !important;
-  z-index: 1031; }
+  top: 58px !important; }
 
 .slide-left {
   transform: translate(356px, 0);
